# libVCT

./: .clang-format  .gitignore  CMakeLists.txt  README.md  libvct_api.h  libvct_api_conf.h.in  vct_reader.c  vct_writer.c
cmake/: common.cmake  macros.cmake
